add discord link

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,13 @@
         <DIV CLASS="lobbyscreen" ID="lobbyscreen">
             <DIV CLASS="homebackgroundcontainer"><DIV CLASS="homebackground"></DIV></DIV>
             <DIV CLASS="tutorial-tooltip" ID="t-tooltip">Hello there! Thanks for playing our game. Would you like to check out the tutorial? It's always accessible through the "Learn to Play" button on the bottom of the page as well.<A HREF="./tutorial" ONCLICK="hidetutorialtt()" TARGET="_blank" CLASS="tooltip-link">Sure!</A><BUTTON ONCLICK="hidetutorialtt();" CLASS="tooltip-link-second">No thanks</BUTTON></DIV>
+            <DIV CLASS="socials">
+                <DIV CLASS="socials-bg"></DIV>
+                <DIV CLASS="socials-discord">
+                    <DIV CLASS="socials-header">Join our Discord!</DIV>
+                    <A HREF="https://discord.gg/SVcahqGxQD" TARGET="_blank" REL="nofollow"><IMG SRC="./images/discord.png" CLASS="socials-icon"></A>
+                </DIV>
+            </DIV>
             <DIV CLASS="homemenu">
                 <DIV CLASS="homemenu-bg"></DIV>
                 <DIV CLASS="homelogo"><IMG CLASS="mainlogoimg" SRC="./images/logo.png"></DIV>
