add sitemap and robots.txt

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <LINK REL="stylesheet" HREF="./css/style.css">
+        <link rel="canonical" href="https://www.emblitz.com">
 
         <meta name="title" content="Emblitz">
         <meta name="description" content="Emblitz is an online real-time strategy game. Fight other players from around the world for control over a variety of maps!">
