update page titles

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <LINK REL="stylesheet" HREF="./css/style.css">
         <link rel="canonical" href="https://www.emblitz.com">
 
-        <meta name="title" content="Emblitz">
+        <meta name="title" content="Emblitz | Multiplayer Strategy Game">
         <meta name="description" content="Emblitz is an online real-time strategy game. Fight other players from around the world for control over a variety of maps!">
         <meta name="keywords" content="emblitz, pvp, real time, game, video game, videogame, conquest, domination, multiplayer, strategy, battle">
         <meta name="robots" content="index, follow">
@@ -40,7 +40,7 @@
         <SCRIPT TYPE="text/javascript" SRC="./js/mapper.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="./js/mapdescriptions.js"></SCRIPT>
 
-        <TITLE>Emblitz</TITLE>
+        <TITLE>Emblitz | Multiplayer Strategy Game</TITLE>
     </HEAD>
     <BODY>
         <DIV ID="notifications">
