--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -5,6 +5,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <LINK REL="stylesheet" HREF="./css/style.css">
 
+        <meta name="title" content="Emblitz | Tutorial">
+        <meta name="description" content="Learn to play Emblitz, a real-time strategy game, with this comprehensive tutorial! You'll quickly learn the basics to the game, as well as important gameplay mechanics and rules.">
+        <meta name="keywords" content="emblitz, pvp, real time, game, video game, videogame, conquest, domination, multiplayer, strategy, battle">
+
         <link rel="icon" href="./images/icon.png">
         <TITLE>Emblitz | Tutorial</TITLE>
     </HEAD>
