--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         <SCRIPT TYPE="text/javascript" SRC="./js/mapper.js"></SCRIPT>
         <SCRIPT TYPE="text/javascript" SRC="./js/mapdescriptions.js"></SCRIPT>
 
-        <TITLE>Emblitz | Multiplayer Strategy Game</TITLE>
+        <TITLE>Emblitz</TITLE>
     </HEAD>
     <BODY>
         <DIV ID="notifications">
