--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<HTML>
+<HTML LANG="en">
     <HEAD>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
