--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -8,6 +8,9 @@
         <meta name="title" content="Emblitz | Tutorial">
         <meta name="description" content="Learn to play Emblitz, a real-time strategy game, with this comprehensive tutorial! You'll quickly learn the basics to the game, as well as important gameplay mechanics and rules.">
         <meta name="keywords" content="emblitz, pvp, real time, game, video game, videogame, conquest, domination, multiplayer, strategy, battle">
+        <meta name="robots" content="index, follow">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="language" content="en">
 
         <link rel="icon" href="./images/icon.png">
         <TITLE>Emblitz | Tutorial</TITLE>
