fix 404 page css dependency

--- a/public/errorpages/404.html
+++ b/public/errorpages/404.html
@@ -15,8 +15,8 @@
             font-family: 'Open Sans', sans-serif;
             margin: 0;
             overflow-x: hidden;
-            background: var(--dark);
-            color: var(--light);
+            background: #121212;
+            color: #ffffff;
         }
 
         h1 {
