fix 404 page css dependency

--- a/public/errorpages/404.html
+++ b/public/errorpages/404.html
@@ -33,6 +33,22 @@
             width: 320px;
             margin-top: 20px;
         }
+
+        .nostyle-link {
+            color: var(--light);
+        }
+
+        .nostyle-link:visited {
+            color: var(--light);
+        }
+
+        .nostyle-link:hover {
+            color: var(--medium);
+        }
+
+        .nostyle-link:visited:hover {
+            color: var(--medium);
+        }
     </STYLE>
     <BODY>
         <A HREF="https://www.emblitz.com"><IMG CLASS="errorlogo" SRC="../images/logo.png"></A>
