add mobile responsiveness

--- a/public/errorpages/404.html
+++ b/public/errorpages/404.html
@@ -5,6 +5,7 @@
         <LINK REL="stylesheet" HREF="./css/style.css">
 
         <link rel="icon" href="../images/icon.png">
+        <TITLE>Emblitz | 404 Not Found</TITLE>
     </HEAD>
     <STYLE>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans');
