--- a/public/index.html
+++ b/public/index.html
@@ -56,77 +56,97 @@
                     <A HREF="https://discord.gg/SVcahqGxQD" TARGET="_blank" REL="nofollow"><IMG SRC="./images/discord.png" CLASS="socials-icon"></A>
                 </DIV>
             </DIV>
-            <DIV CLASS="homemenu">
-                <DIV CLASS="homemenu-bg"></DIV>
-                <DIV CLASS="homelogo"><IMG CLASS="mainlogoimg" SRC="./images/logo.png"></DIV>
-                <DIV CLASS="join_input" ID="join_input">
-                    <DIV CLASS="ji-area">
-                        <DIV CLASS="ji-header">Enter your username and preferred player color.</DIV>
-                        <INPUT ID="p_name" ONKEYUP='localStorage.setItem("username", this.value);' CLASS="name_input" MAXLENGTH="18" TYPE="text" PLACEHOLDER="Username here...">
-                        <SELECT ONCHANGE='localStorage.setItem("color", this.value);' CLASS="framecolorselect" ID="framecolor">
-                            <OPTION VALUE="red">red</OPTION>
-                            <OPTION VALUE="orange">orange</OPTION>
-                            <OPTION VALUE="yellow">yellow</OPTION>
-                            <OPTION VALUE="green">green</OPTION>
-                            <OPTION VALUE="blue">blue</OPTION>
-                            <OPTION VALUE="purple">purple</OPTION>
-                        </SELECT>
-                    </DIV>
-                    <DIV CLASS="mapselect">
-                        <DIV CLASS="mapselecttitle">Current map selection:</DIV>
-                        <TABLE CLASS="mapnav">
-                            <TBODY>
-                                <TR>
-                                    <TD>
-                                        <BUTTON CLASS="mapnavbutton" ID="mapleft" ONCLICK="changeMapSelect('left')"><I CLASS="fa fa-chevron-left"></I></BUTTON>
-                                    </TD>
-                                    <TD>
-                                        <!-- map selection card -->
-                                        <DIV CLASS="selectedmapcontainer">
-                                            <TABLE CLASS="selectedmap">
-                                                <TBODY>
-                                                    <TR>
-                                                        <TD>
-                                                            <DIV CLASS="s-image"><IMG ID="s-image" SRC="./images/randompreview.JPG"></DIV>
-                                                        </TD>
-                                                        <TD>
-                                                            <DIV CLASS="s-text">
-                                                                <DIV CLASS="s-title" ID="s-title">Random Map</DIV>
-                                                                <DIV ID="s-maxplayers" STYLE="font-size: 13px; display: none"></DIV>
-                                                                <DIV CLASS="s-description" ID="s-description">You'll join a game with a random map. It could be anything, so be prepared!</DIV>
-                                                            </DIV>
-                                                        </TD>
-                                                    </TR>
-                                                </TBODY>
-                                            </TABLE>
-                                        </DIV>
-                                    </TD>
-                                    <TD>
-                                        <BUTTON CLASS="mapnavbutton" ID="mapright" ONCLICK="changeMapSelect('right')"><I CLASS="fa fa-chevron-right"></I></BUTTON>
-                                    </TD>
-                                </TR>
-                            </TBODY>
-                        </TABLE>
-                    </DIV>
-                    <DIV CLASS="h_button_options">
-                        <BUTTON CLASS="joinbutton jb_green" ID="joingame" ONCLICK="gameConnect(document.getElementById('p_name').value, null, document.getElementById('framecolor').value, mapselectedvalue, false)">Play</BUTTON>
-                        <BUTTON CLASS="joinbutton jb_gray" ID="joinprivate" ONCLICK="showJoinRoom()">Join Game</BUTTON>
-                        <DIV CLASS="joinroom_area" ID="joinroom_area" STYLE="display: none;">
-                            <DIV CLASS="joinroomtext">Got an invite code? Enter it here to join the game. If not, use the "Play" button to play a random match.</DIV>
-                            <INPUT CLASS="room_input" ID="room_id" MAXLENGTH="6" PLACEHOLDER="123abc"><BUTTON CLASS="joinbutton jb_green" ID="joingame" style="padding: 7px !important; margin-left: 5px" ONCLICK="gameConnect(document.getElementById('p_name').value, 'r-' + document.getElementById('room_id').value, document.getElementById('framecolor').value, null, false)">Connect</BUTTON>
+            <DIV CLASS="homeguicontainer">
+                <DIV CLASS="homemenu">
+                    <DIV CLASS="homemenu-bg"></DIV>
+                    <DIV CLASS="homelogo"><IMG CLASS="mainlogoimg" SRC="./images/logo.png"></DIV>
+                    <DIV CLASS="join_input" ID="join_input">
+                        <DIV CLASS="ji-area">
+                            <DIV CLASS="ji-header">Enter your username and preferred player color.</DIV>
+                            <INPUT ID="p_name" ONKEYUP='localStorage.setItem("username", this.value);' CLASS="name_input" MAXLENGTH="18" TYPE="text" PLACEHOLDER="Username here...">
+                            <SELECT ONCHANGE='localStorage.setItem("color", this.value);' CLASS="framecolorselect" ID="framecolor">
+                                <OPTION VALUE="red">red</OPTION>
+                                <OPTION VALUE="orange">orange</OPTION>
+                                <OPTION VALUE="yellow">yellow</OPTION>
+                                <OPTION VALUE="green">green</OPTION>
+                                <OPTION VALUE="blue">blue</OPTION>
+                                <OPTION VALUE="purple">purple</OPTION>
+                            </SELECT>
                         </DIV>
-                        <BR><BR>
-                        <BUTTON CLASS="joinbutton jb_gray joinprivateroom" ID="joingame" ONCLICK="gameConnect(document.getElementById('p_name').value, null, document.getElementById('framecolor').value, mapselectedvalue, true)" STYLE="width: 250px;">Create Private Room</BUTTON>
-                        <BR>
+                        <DIV CLASS="mapselect">
+                            <DIV CLASS="mapselecttitle">Current map selection:</DIV>
+                            <TABLE CLASS="mapnav">
+                                <TBODY>
+                                    <TR>
+                                        <TD>
+                                            <BUTTON CLASS="mapnavbutton" ID="mapleft" ONCLICK="changeMapSelect('left')"><I CLASS="fa fa-chevron-left"></I></BUTTON>
+                                        </TD>
+                                        <TD>
+                                            <!-- map selection card -->
+                                            <DIV CLASS="selectedmapcontainer">
+                                                <TABLE CLASS="selectedmap">
+                                                    <TBODY>
+                                                        <TR>
+                                                            <TD>
+                                                                <DIV CLASS="s-image"><IMG ID="s-image" SRC="./images/randompreview.JPG"></DIV>
+                                                            </TD>
+                                                            <TD>
+                                                                <DIV CLASS="s-text">
+                                                                    <DIV CLASS="s-title" ID="s-title">Random Map</DIV>
+                                                                    <DIV ID="s-maxplayers" STYLE="font-size: 13px; display: none"></DIV>
+                                                                    <DIV CLASS="s-description" ID="s-description">You'll join a game with a random map. It could be anything, so be prepared!</DIV>
+                                                                </DIV>
+                                                            </TD>
+                                                        </TR>
+                                                    </TBODY>
+                                                </TABLE>
+                                            </DIV>
+                                        </TD>
+                                        <TD>
+                                            <BUTTON CLASS="mapnavbutton" ID="mapright" ONCLICK="changeMapSelect('right')"><I CLASS="fa fa-chevron-right"></I></BUTTON>
+                                        </TD>
+                                    </TR>
+                                </TBODY>
+                            </TABLE>
+                        </DIV>
+                        <DIV CLASS="h_button_options">
+                            <BUTTON CLASS="joinbutton jb_green" ID="joingame" ONCLICK="gameConnect(document.getElementById('p_name').value, null, document.getElementById('framecolor').value, mapselectedvalue, false)">Play</BUTTON>
+                            <BUTTON CLASS="joinbutton jb_gray" ID="joinprivate" ONCLICK="showJoinRoom()">Join Game</BUTTON>
+                            <DIV CLASS="joinroom_area" ID="joinroom_area" STYLE="display: none;">
+                                <DIV CLASS="joinroomtext">Got an invite code? Enter it here to join the game. If not, use the "Play" button to play a random match.</DIV>
+                                <INPUT CLASS="room_input" ID="room_id" MAXLENGTH="6" PLACEHOLDER="123abc"><BUTTON CLASS="joinbutton jb_green" ID="joingame" style="padding: 7px !important; margin-left: 5px" ONCLICK="gameConnect(document.getElementById('p_name').value, 'r-' + document.getElementById('room_id').value, document.getElementById('framecolor').value, null, false)">Connect</BUTTON>
+                            </DIV>
+                            <BR><BR>
+                            <BUTTON CLASS="joinbutton jb_gray joinprivateroom" ID="joingame" ONCLICK="gameConnect(document.getElementById('p_name').value, null, document.getElementById('framecolor').value, mapselectedvalue, true)" STYLE="width: 250px;">Create Private Room</BUTTON>
+                            <BR>
+                        </DIV>
+                        <A HREF="./tutorial" TARGET="_blank" CLASS="ltp-link">Game Tutorial</A><BR><BR>
+                        <DIV CLASS="mobile-socials">
+                            <DIV CLASS="socials-header">Join our Discord!</DIV>
+                            <A HREF="https://discord.gg/SVcahqGxQD" TARGET="_blank" REL="nofollow"><IMG SRC="./images/discord.png" CLASS="socials-icon"></A><BR><BR>
+                        </DIV>
                     </DIV>
-                    <A HREF="./tutorial" TARGET="_blank" CLASS="ltp-link">Game Tutorial</A><BR><BR>
-                    <DIV CLASS="mobile-socials">
-                        <DIV CLASS="socials-header">Join our Discord!</DIV>
-                        <A HREF="https://discord.gg/SVcahqGxQD" TARGET="_blank" REL="nofollow"><IMG SRC="./images/discord.png" CLASS="socials-icon"></A><BR><BR>
+                </DIV>
+                <DIV CLASS="gamenews" ID="gamenews-container">
+                    <DIV CLASS="gamenews-bg"></DIV>
+                    <DIV CLASS="gn-header"><I CLASS="fa fa-newspaper-o"></I> Latest Game News <BUTTON ID="gn-exit" ONCLICK="hidegamenews()"><I CLASS="fa fa-close"></I></BUTTON></DIV>
+                    <DIV CLASS="gn-body" ID="gn-body">Loading...
                     </DIV>
                 </DIV>
             </DIV>
+            <BUTTON ID="shownewsbutton" ONCLICK='document.getElementById("gamenews-container").style.setProperty("display", "inline-block", "important"); this.style.setProperty("display", "none", "important"); document.getElementsByClassName("homeguicontainer")[0].style.setProperty("position", "fixed");' CLASS="shownewsbutton jb_gray"><I CLASS="fa fa-newspaper-o"></I> Latest News</BUTTON>
             <DIV CLASS="gameversion"><%= gameversion %></DIV>
+            <DIV CLASS="gn-reader">
+                <DIV CLASS="gn-reader-bg"></DIV>
+                <DIV CLASS="gn-reader-area">
+                    <BUTTON CLASS="gn-reader-exit" ONCLICK="hidenewsreader()"><I CLASS="fa fa-close"></I></BUTTON>
+                    <DIV CLASS="gn-inner">
+                        <DIV ID="gn-title">loading...</DIV>
+                        <DIV ID="gn-date">loading...</DIV>
+                        <DIV ID="gn-content">loading...</DIV>
+                    </DIV>
+                </DIV>
+            </DIV>
         </DIV>
         <DIV CLASS="gamelobby" ID="gamelobby">
             <DIV CLASS="globby_container">
