add line break insertion

--- a/public/admin.html
+++ b/public/admin.html
@@ -24,7 +24,7 @@
                     let auth = authpassword;
                     let title = document.getElementById("title").value;
                     let image = document.getElementById("image").value;
-                    let content = document.getElementById("content").value.replace(/(?:\r\n|\r|\n)/g, "<br>");;
+                    let content = document.getElementById("content").value.replace(/(?:\r\n|\r|\n)/g, "<br>");
                     let submittedtime = document.getElementById("date").value;
 
                     if(!title) {
