--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,9 @@
                             <BUTTON CLASS="joinbutton jb_gray joinprivateroom" ID="joingame" ONCLICK="gameConnect(document.getElementById('p_name').value, null, document.getElementById('framecolor').value, mapselectedvalue, true)" STYLE="width: 250px;">Create Private Room</BUTTON>
                             <BR>
                         </DIV>
-
+                        <A HREF="./tutorial" TARGET="_blank" CLASS="ltp-link" STYLE="font-size: 20px">Game Tutorial</A><BR><BR>
+                        
+                        <DIV STYLE="color: var(--medium); font-size: 16px; padding-bottom: 5px;">Advertisement</DIV>
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6720539950929131"
                             crossorigin="anonymous"></script>
                         <!-- right banner ad 1 -->
@@ -148,8 +150,7 @@
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
-                        
-                        <A HREF="./tutorial" TARGET="_blank" CLASS="ltp-link" STYLE="font-size: 20px">Game Tutorial</A><BR><BR>
+
                         <DIV CLASS="mobile-socials">
                             <DIV CLASS="socials-header">Join our Discord!</DIV>
                             <A HREF="https://discord.gg/SVcahqGxQD" TARGET="_blank" REL="nofollow"><IMG SRC="./images/discord.png" CLASS="socials-icon"></A><BR><BR>
