force horizontal ads

--- a/public/index.html
+++ b/public/index.html
@@ -148,13 +148,13 @@
                             style="display:block"
                             data-ad-client="ca-pub-6720539950929131"
                             data-ad-slot="1363505131"
-                            data-ad-format="auto"
+                            data-ad-format="horizontal"
                             data-full-width-responsive="true">
                         </ins>
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
-                        
+
                     </DIV>
                 </DIV>
                 <DIV CLASS="gamenews" ID="gamenews-container">
