edit ad placement

--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
                 <BUTTON ONCLICK="exitLobby()" CLASS="joinbutton jb_gray" STYLE="margin-top: 10px; padding-left: 5px; padding-right: 5px">Back to Main Menu</BUTTON>
             </DIV>
 
-            <DIV STYLE="font-size: 16px; color: var(--medium); text-align: center; width: 100%; margin-top: 20px;">Advertisement</DIV>
+            <DIV STYLE="font-size: 16px; color: var(--medium); text-align: center; width: 100%; margin-top: 20px; margin-bottom: 5px;">Advertisement</DIV>
 
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6720539950929131"
                 crossorigin="anonymous"></script>
