--- a/public/index.html
+++ b/public/index.html
@@ -192,19 +192,22 @@
             </DIV>
 
             <DIV STYLE="font-size: 16px; color: var(--medium); text-align: center; width: 100%; margin-top: 20px; margin-bottom: 5px;">Advertisement</DIV>
-
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6720539950929131"
-                crossorigin="anonymous"></script>
-            <!-- lobby ad 1 -->
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-6720539950929131"
-                data-ad-slot="8699672319"
-                data-ad-format="horizontal"
-                data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <DIV STYLE="width: 100%; min-height: 100px; text-align: center;">
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6720539950929131"
+                    crossorigin="anonymous"></script>
+                <!-- lobby ad 1 -->
+                <ins class="adsbygoogle"
+                    style="display:block"
+                    data-ad-client="ca-pub-6720539950929131"
+                    data-ad-slot="8699672319"
+                    data-ad-format="horizontal"
+                    data-full-width-responsive="true"></ins>
+                <script>
+                    window.onload = function() {
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    }
+                </script>
+            </DIV>
 
         </DIV>
         <DIV CLASS="gamescreen" ID="gamescreen">
