--- a/public/index.html
+++ b/public/index.html
@@ -203,9 +203,9 @@
                     data-ad-format="horizontal"
                     data-full-width-responsive="true"></ins>
                 <script>
-                    window.onload = function() {
+                    window.addEventListener("load", function() {
                         (adsbygoogle = window.adsbygoogle || []).push({});
-                    }
+                    });
                 </script>
             </DIV>
 
