fix lobby ad not appearing

--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
             </DIV>
 
             <DIV STYLE="font-size: 16px; color: var(--medium); text-align: center; width: 100%; margin-top: 20px; margin-bottom: 5px;">Advertisement</DIV>
-            <DIV STYLE="width: 100%; min-height: 100px; text-align: center;">
+            <DIV CLASS="wideadcontainer">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6720539950929131"
                     crossorigin="anonymous"></script>
                 <!-- lobby ad 1 -->
