add WIP user account changes

--- a/public/errorpages/404.html
+++ b/public/errorpages/404.html
@@ -52,7 +52,7 @@
         }
     </STYLE>
     <BODY>
-        <A HREF="https://www.emblitz.com"><IMG CLASS="errorlogo" SRC="../images/logo.png"></A>
+        <A HREF="https://www.emblitz.com"><IMG CLASS="errorlogo" SRC="https://www.emblitz.com/images/logo.png"></A>
         <H1 STYLE="margin-top: 10px;">404</H1>
         <DIV CLASS="errordescript"><DIV STYLE="max-width: 400px; margin: auto;">We searched through every map and territory but couldn't find the page you were looking for. <A CLASS="nostyle-link" HREF="https://www.emblitz.com">How about going back to the home page?</A></DIV></DIV>
     </BODY>
