add WIP user account changes

--- a/public/user.html
+++ b/public/user.html
@@ -27,7 +27,7 @@
             const username = "<%- username %>";
         </SCRIPT>
 
-        <link rel="icon" href="./images/icon.png">
+        <link rel="icon" href="../images/icon.png">
         <SCRIPT TYPE="text/javascript" SRC="../js/userprofile.js"></SCRIPT>
     </HEAD>
     <BODY>
