finished up half of the login page (need some help with variables still)

--- a/public/user.html
+++ b/public/user.html
@@ -34,8 +34,16 @@
         <DIV CLASS="u-banner-container">
             <DIV CLASS="u-banner"></DIV>
             <DIV CLASS="u-banner-content">
-                test content
+                <DIV CLASS="profile-outline">
+                    <DIV CLASS="user_avatar-frame" STYLE="border: 5px solid red"><IMG STYLE="width: 60px; height: 60px" SRC="../images/defaultpfp.png"></DIV>
+                    <DIV CLASS="glb_p_info"><DIV ID="p_name" CLASS="lb_p_name">WWWWWWWWWWWWWWWWWW</DIV></DIV>
+                </DIV>
             </DIV>
+        </DIV>
+        <DIV CLASS="user_body">
+            <p>Account created: placeholder</p>
+            <p>Wins: placeholder</p>
+            <p>Losses: placeholder</p>
         </DIV>
     </BODY>
 </HTML>
