WIP backend integrations

--- a/public/user.html
+++ b/public/user.html
@@ -40,8 +40,8 @@
         </DIV>
         <DIV CLASS="u-body">
             <DIV CLASS="u-playerstats">
-                <DIV CLASS="u-playerstats-stat"><SPAN ID="wins-amount">--</SPAN> Wins</DIV>
-                <DIV CLASS="u-playerstats-stat"><SPAN ID="losses-amount">--</SPAN> Losses</DIV>
+                <DIV CLASS="u-playerstats-stat"><IMG CLASS="medal-img" SRC="../images/medal.png"><SPAN ID="wins-amount">--</SPAN> medals</DIV>
+                <DIV CLASS="u-playerstats-stat"><SPAN ID="gamesplayed-amount">--</SPAN> games played</DIV>
                 <DIV CLASS="u-playerstats-stat">Joined on <SPAN ID="join-date">--/--/--</SPAN></DIV>
             </DIV>
             <DIV CLASS="u-badge-title">Badges</DIV>
